samples/_failures_safe/1760888116_ec44f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f064bbb7.c: In function ‘main’:
./samples/SAFE/__tmp_f064bbb7.c:161:27: error: expected ‘)’ at end of input
  161 |     if (strlen(input) == 0
      |        ~                  ^
      |                           )
./samples/SAFE/__tmp_f064bbb7.c:161:5: error: expected declaration or statement at end of input
  161 |     if (strlen(input) == 0
      |     ^~
